# serializer version: 1
# name: test_plug_device_registry_snapshot
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'powersensor_au',
        'aabbccddeeff',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Powersensor',
    'model': 'PowersensorPlug',
    'model_id': None,
    'name': 'Plug (aabbccddeeff)',
    'name_by_user': None,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_plug_entity_snapshot
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.plug_aabbccddeeff_active_current',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Active current',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
      'original_icon': None,
      'original_name': 'Active current',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'active_current',
      'unique_id': 'aabbccddeeff_active_current',
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.plug_aabbccddeeff_apparent_current',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Apparent current',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
      'original_icon': None,
      'original_name': 'Apparent current',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'apparent_current',
      'unique_id': 'aabbccddeeff_apparent_current',
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
          'appliance',
          'house_net',
          'solar',
          'unknown',
          'water',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.plug_aabbccddeeff_device_role',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Device role',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
      'original_icon': None,
      'original_name': 'Device role',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'device_role',
      'unique_id': 'aabbccddeeff_device_role',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.plug_aabbccddeeff_power',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Power',
      'options': dict({
        'sensor': dict({
          'suggested_display_precision': 1,
        }),
      }),
      'original_device_class': <SensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Power',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'aabbccddeeff_power',
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.plug_aabbccddeeff_reactive_current',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Reactive current',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
      'original_icon': None,
      'original_name': 'Reactive current',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'reactive_current',
      'unique_id': 'aabbccddeeff_reactive_current',
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.plug_aabbccddeeff_energy',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Energy',
      'options': dict({
        'sensor': dict({
          'suggested_display_precision': 2,
        }),
      }),
      'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
      'original_icon': None,
      'original_name': 'Energy',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'aabbccddeeff_total_energy',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.plug_aabbccddeeff_voltage',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Voltage',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
      'original_icon': None,
      'original_name': 'Voltage',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'aabbccddeeff_volts',
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
  ])
# ---
# name: test_sensor_device_registry_renames_on_role[after_role]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'powersensor_au',
        '112233445566',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Powersensor',
    'model': 'PowersensorSensor',
    'model_id': None,
    'name': 'Mains sensor (112233445566)',
    'name_by_user': None,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor_device_registry_renames_on_role[before_role]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'powersensor_au',
        '112233445566',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Powersensor',
    'model': 'PowersensorSensor',
    'model_id': None,
    'name': 'Sensor (112233445566)',
    'name_by_user': None,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor_housenet_state_snapshot
  dict({
    '112233445566_battery_level': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mains sensor (112233445566) Battery',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.sensor_112233445566_battery',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '100.0',
    }),
    '112233445566_device_role': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mains sensor (112233445566) Device role',
        <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
          'appliance',
          'house_net',
          'solar',
          'unknown',
          'water',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'sensor.sensor_112233445566_device_role',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'house_net',
    }),
    '112233445566_power': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mains sensor (112233445566) Power',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.mains_sensor_112233445566_power',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '1500.0',
    }),
    '112233445566_rssi_ble': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'signal_strength',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mains sensor (112233445566) Signal strength (Bluetooth)',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'dBm',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.sensor_112233445566_signal_strength_bluetooth',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '-72',
    }),
    '112233445566_total_energy': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mains sensor (112233445566) Energy',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL: 'total'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.mains_sensor_112233445566_energy',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '5.0',
    }),
    'vhh_from_grid': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Power - from grid',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_power_from_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '1500',
    }),
    'vhh_from_grid_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Energy - from grid',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_energy_from_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'vhh_home_usage': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Power - home use',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_power_home_use',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '1500',
    }),
    'vhh_home_usage_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Energy - home usage',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_energy_home_usage',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  })
# ---
# name: test_sensor_no_role_entity_snapshot
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.sensor_112233445566_battery',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Battery',
      'options': dict({
        'sensor': dict({
          'suggested_display_precision': 0,
        }),
      }),
      'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
      'original_icon': None,
      'original_name': 'Battery',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '112233445566_battery_level',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
          'appliance',
          'house_net',
          'solar',
          'unknown',
          'water',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.sensor_112233445566_device_role',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Device role',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
      'original_icon': None,
      'original_name': 'Device role',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'device_role',
      'unique_id': '112233445566_device_role',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.sensor_112233445566_signal_strength_bluetooth',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Signal strength (Bluetooth)',
      'options': dict({
        'sensor': dict({
          'suggested_display_precision': 1,
        }),
      }),
      'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
      'original_icon': None,
      'original_name': 'Signal strength (Bluetooth)',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'rssi_ble',
      'unique_id': '112233445566_rssi_ble',
      'unit_of_measurement': 'dBm',
    }),
  ])
# ---
# name: test_vhh_full_state_snapshot
  dict({
    'vhh_from_grid': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Power - from grid',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_power_from_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '800',
    }),
    'vhh_from_grid_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Energy - from grid',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_energy_from_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'vhh_home_usage': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Power - home use',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_power_home_use',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '800',
    }),
    'vhh_home_usage_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Energy - home usage',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_energy_home_usage',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'vhh_solar_generation': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Power - solar generation',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_power_solar_generation',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'vhh_solar_generation_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Energy - solar generation',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_energy_solar_generation',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'vhh_to_grid': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Power - to grid',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_power_to_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'vhh_to_grid_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Household view Energy - to grid',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.household_view_energy_to_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  })
# ---
